--- a/portfolio.html
+++ b/portfolio.html
@@ -5,26 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка сайта -->
     <header>
       <nav>
-        <a href="./index.html"> WebStudio </a>
+        <a href="./index.html" class="logo-webstudio">
+          Web<span class="studio-logo-part">Studio</span>
+        </a>
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="./index.html" class="nav-link">Студия</a></li>
+          <li><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
+          <li><a href="" class="nav-link">Контакты</a></li>
         </ul>
       </nav>
       <ul>
         <li>
-          <a class="contacts_link" href="mailto:info@devstudio.com"
+          <a class="contacts-link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a class="contacts_link" href="tel:+380961111111"
+          <a class="contacts-link" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
         </li>
@@ -149,22 +157,26 @@
     </main>
     <!-- Футер -->
     <footer>
-      <a href="./index.html"> WebStudio </a>
-      <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <ul>
-          <li>
-            <a class="contacts_link" href="mailto:info@example.com"
-              >info@example.com</a
-            >
-          </li>
-          <li>
-            <a class="contacts_link" href="tel:+380991111111"
-              >+38 099 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="footer-container">
+        <a href="./index.html" class="light-logo-webstudio">
+          Web<span class="light-studio-logo-part">Studio</span>
+        </a>
+        <address>
+          <p class="office-address">г. Киев, пр-т Леси Украинки, 26</p>
+          <ul>
+            <li>
+              <a class="light-contacts-link" href="mailto:info@example.com"
+                >info@example.com</a
+              >
+            </li>
+            <li>
+              <a class="light-contacts-link" href="tel:+380991111111"
+                >+38 099 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
