added index text styles and background colors

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,18 +14,18 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header>
+    <header class="header-container">
       <nav>
         <a href="./index.html" class="logo-webstudio">
           Web<span class="studio-logo-part">Studio</span>
         </a>
-        <ul>
+        <ul class="list">
           <li><a href="./index.html" class="nav-link">Студия</a></li>
           <li><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
           <li><a href="" class="nav-link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list">
         <li>
           <a class="contacts-link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
@@ -40,8 +40,8 @@
     </header>
     <main>
       <section>
-        <h2>Фильтрация проектов</h2>
-        <ul>
+        <h1>Наши проекты</h1>
+        <ul class="list">
           <li>
             <button type="button">Все</button>
           </li>
@@ -58,10 +58,7 @@
             <button type="button">Маркетинг</button>
           </li>
         </ul>
-      </section>
-      <section>
-        <h1>Наше портфолио</h1>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/techno_site.jpg"
@@ -156,27 +153,25 @@
       </section>
     </main>
     <!-- Футер -->
-    <footer>
-      <div class="footer-container">
-        <a href="./index.html" class="light-logo-webstudio">
-          Web<span class="light-studio-logo-part">Studio</span>
-        </a>
-        <address>
-          <p class="office-address">г. Киев, пр-т Леси Украинки, 26</p>
-          <ul>
-            <li>
-              <a class="light-contacts-link" href="mailto:info@example.com"
-                >info@example.com</a
-              >
-            </li>
-            <li>
-              <a class="light-contacts-link" href="tel:+380991111111"
-                >+38 099 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
+    <footer class="footer-container">
+      <a href="./index.html" class="light-logo-webstudio">
+        Web<span class="light-studio-logo-part">Studio</span>
+      </a>
+      <address>
+        <p class="office-address">г. Киев, пр-т Леси Украинки, 26</p>
+        <ul class="list">
+          <li>
+            <a class="light-contacts-link" href="mailto:info@example.com"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a class="light-contacts-link" href="tel:+380991111111"
+              >+38 099 111 11 11</a
+            >
+          </li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
