--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header>
+    <header class="header-container">
       <nav>
         <a href="./index.html" class="logo-webstudio">
           Web<span class="studio-logo-part">Studio</span>
         </a>
-        <ul>
+        <ul class="list">
           <li><a href="./index.html" class="nav-link">Студия</a></li>
           <li><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
           <li><a href="" class="nav-link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list">
         <li>
           <a class="contacts-link" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
@@ -39,37 +39,37 @@
     </header>
     <main>
       <!-- Герой -->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero-container">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="btn-order-service">Заказать услугу</button>
       </section>
       <section>
         <h2>Преимущества</h2>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="advantage-header">Внимание к деталям</h3>
+            <p class="advantage-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="advantage-header">Пунктуальность</h3>
+            <p class="advantage-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="advantage-header">Планирование</h3>
+            <p class="advantage-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="advantage-header">Современные технологии</h3>
+            <p class="advantage-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -77,8 +77,8 @@
         </ul>
       </section>
       <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/laptop.jpg"
@@ -105,9 +105,9 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="team-container">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/man_in_glasses.jpg"
@@ -115,8 +115,8 @@
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team-member-name">Игорь Демьяненко</h3>
+            <p class="team-member-position">Product Designer</p>
           </li>
           <li>
             <img
@@ -125,8 +125,8 @@
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-member-name">Ольга Репина</h3>
+            <p class="team-member-position">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -135,8 +135,8 @@
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team-member-name">Николай Тарасов</h3>
+            <p class="team-member-position">Marketing</p>
           </li>
           <li>
             <img
@@ -145,34 +145,32 @@
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team-member-name">Михаил Ермаков</h3>
+            <p class="team-member-position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Футер -->
-    <footer>
-      <div class="footer-container">
-        <a href="./index.html" class="light-logo-webstudio">
-          Web<span class="light-studio-logo-part">Studio</span>
-        </a>
-        <address>
-          <p class="office-address">г. Киев, пр-т Леси Украинки, 26</p>
-          <ul>
-            <li>
-              <a class="light-contacts-link" href="mailto:info@example.com"
-                >info@example.com</a
-              >
-            </li>
-            <li>
-              <a class="light-contacts-link" href="tel:+380991111111"
-                >+38 099 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
+    <footer class="footer-container">
+      <a href="./index.html" class="light-logo-webstudio">
+        Web<span class="light-studio-logo-part">Studio</span>
+      </a>
+      <address>
+        <p class="office-address">г. Киев, пр-т Леси Украинки, 26</p>
+        <ul class="list">
+          <li>
+            <a class="light-contacts-link" href="mailto:info@example.com"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a class="light-contacts-link" href="tel:+380991111111"
+              >+38 099 111 11 11</a
+            >
+          </li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
