--- a/portfolio.html
+++ b/portfolio.html
@@ -43,19 +43,19 @@
         <h1>Наши проекты</h1>
         <ul class="list">
           <li>
-            <button type="button">Все</button>
+            <button type="button" class="btn-filter">Все</button>
           </li>
           <li>
-            <button type="button">Веб-сайты</button>
+            <button type="button" class="btn-filter">Веб-сайты</button>
           </li>
           <li>
-            <button type="button">Приложения</button>
+            <button type="button" class="btn-filter">Приложения</button>
           </li>
           <li>
-            <button type="button">Дизайн</button>
+            <button type="button" class="btn-filter">Дизайн</button>
           </li>
           <li>
-            <button type="button">Маркетинг</button>
+            <button type="button" class="btn-filter">Маркетинг</button>
           </li>
         </ul>
         <ul class="list">
@@ -66,8 +66,8 @@
               width="370"
               height="294"
             />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <h2 class="project-name">Технокряк</h2>
+            <p class="project-type">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -76,8 +76,8 @@
               width="370"
               height="294"
             />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
+            <p class="project-type">Дизайн</p>
           </li>
           <li>
             <img
@@ -86,8 +86,8 @@
               width="370"
               height="294"
             />
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
+            <h2 class="project-name">Ресторан Seafood</h2>
+            <p class="project-type">Приложение</p>
           </li>
           <li>
             <img
@@ -96,8 +96,8 @@
               width="370"
               height="294"
             />
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p>
+            <h2 class="project-name">Проект Prime</h2>
+            <p class="project-type">Маркетинг</p>
           </li>
           <li>
             <img
@@ -106,8 +106,8 @@
               width="370"
               height="294"
             />
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p>
+            <h2 class="project-name">Проект Boxes</h2>
+            <p class="project-type">Приложение</p>
           </li>
           <li>
             <img
@@ -116,8 +116,8 @@
               width="370"
               height="294"
             />
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <h2 class="project-name">Inspiration has no Borders</h2>
+            <p class="project-type">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -126,8 +126,8 @@
               width="370"
               height="294"
             />
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p>
+            <h2 class="project-name">Издание Limited Edition</h2>
+            <p class="project-type">Дизайн</p>
           </li>
           <li>
             <img
@@ -137,7 +137,7 @@
               height="294"
             />
             <h2>Проект LAB</h2>
-            <p>Маркетинг</p>
+            <p class="project-type">Маркетинг</p>
           </li>
           <li>
             <img
@@ -146,8 +146,8 @@
               width="370"
               height="294"
             />
-            <h2>Growing Business</h2>
-            <p>Приложение</p>
+            <h2 class="project-name">Growing Business</h2>
+            <p class="project-type">Приложение</p>
           </li>
         </ul>
       </section>
