--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <button type="button" class="btn-order-service">Заказать услугу</button>
       </section>
       <section>
-        <h2>Преимущества</h2>
+        <h2 class="advantages-title">Преимущества</h2>
         <ul class="list">
           <li>
             <h3 class="advantage-header">Внимание к деталям</h3>
