--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
     </header>
     <main>
       <section>
-        <h1>Наши проекты</h1>
+        <h1 class="projects-title">Наши проекты</h1>
         <ul class="list">
           <li>
             <button type="button" class="btn-filter">Все</button>
@@ -136,7 +136,7 @@
               width="370"
               height="294"
             />
-            <h2>Проект LAB</h2>
+            <h2 class="project-name">Проект LAB</h2>
             <p class="project-type">Маркетинг</p>
           </li>
           <li>
